# django-seo-suite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
seo_suite/: __init__.py  admin.py  admin_grouping.py  apps.py  cache.py  canonical.py  conf.py  context.py  extension.py  hreflang.py  metadata.py  mixins.py  models.py  resolver.py  signals.py  sitemaps.py  sites.py  urls.py  views.py
seo_suite/contrib/: base.py
seo_suite/contrib/seoobject/: admin.py  apps.py  models.py  provider.py
seo_suite/contrib/seoobject/migrations/: 0001_initial.py
seo_suite/contrib/seopath/: admin.py  apps.py  models.py  provider.py
seo_suite/contrib/seopath/migrations/: 0001_initial.py
seo_suite/migrations/: 0001_initial.py
seo_suite/providers/: __init__.py  model_mixin.py  registry.py  view_mixin.py
seo_suite/schema/: __init__.py  profiles.py  registry.py
seo_suite/templates/seo_suite/: _canonical.html  _extra_head.html  _hreflang.html  _jsonld.html  _meta.html  _opengraph.html  _title.html  _twitter.html  head.html
seo_suite/templatetags/: seo_suite.py
tests/: conftest.py  settings_test.py  test_admin_grouping.py  test_cache.py  test_extension_points.py  test_metadata.py  test_providers_model.py  test_providers_object.py  test_providers_path.py  test_providers_view.py  test_resolver.py  test_robots.py  test_schema.py  test_sitemaps.py  test_sites_optional.py  test_templatetags.py  urls.py
tests/fakepro/: apps.py  seo_extensions.py
tests/override_templates/seo_suite/: _title.html
tests/testapp/: models.py  seo_extensions.py
